welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: value =< is not a member of Int
  if ( a =< 10+b || a =< 10+c){
         ^lessBy10:2: error: value =< is not a member of Int
  if ( a =< 10+b || a =< 10+c){
                      ^lessBy10:5: error: value =< is not a member of Int
  else if ( b=<10+a || b =<10+c){
             ^lessBy10:5: error: value =< is not a member of Int
  else if ( b=<10+a || b =<10+c){
                         ^lessBy10:8: error: value =< is not a member of Int
  else if ( c=<10+a || c =<10+b){
             ^lessBy10:8: error: value =< is not a member of Int
  else if ( c=<10+a || c =<10+b){
                         ^